# kolben

./: Cargo.toml  README.md
src/: lib.rs  rlercobs.rs
tests/: cobs-demos.rs  hound-of-the-baskervilles.txt
tests/snapshots/: cobs_demos__reverse_cobs_vec.snap  cobs_demos__reverse_zcobs_vec-2.snap  cobs_demos__reverse_zcobs_vec-3.snap  cobs_demos__reverse_zcobs_vec-4.snap  cobs_demos__reverse_zcobs_vec.snap  cobs_demos__rler_baskervilles.snap  cobs_demos__rler_baskervilles_nulls.snap  cobs_demos__rler_cobs_roundtrip-2.snap  cobs_demos__rler_cobs_roundtrip-3.snap  cobs_demos__rler_cobs_roundtrip-4.snap  cobs_demos__rler_cobs_roundtrip-5.snap  cobs_demos__rler_cobs_roundtrip-6.snap  cobs_demos__rler_cobs_roundtrip.snap  cobs_demos__rler_cobs_vec-2.snap  cobs_demos__rler_cobs_vec-3.snap  cobs_demos__rler_cobs_vec-4.snap  cobs_demos__rler_cobs_vec-4.snap.new  cobs_demos__rler_cobs_vec-6.snap  cobs_demos__rler_cobs_vec.snap  cobs_demos__standard_cobs_vec-2.snap  cobs_demos__standard_cobs_vec.snap
