[package]
name = "kolben"
version = "0.0.1"
description = "A collection of COBS"
repository = "https://github.com/jamesmunns/kolben"
authors = ["James Munns <james.munns@ferrous-systems.com>"]
edition = "2018"
readme = "README.md"

categories = [
    "embedded",
    "no-std",
    "memory-management",
]
license = "MIT OR Apache-2.0"

[package.metadata.docs.rs]
all-features = true

[dependencies.rzcobs]
version = "0.1.1"
default-features = false

[dependencies.rcobs]
version = "0.1.1"
default-features = false

[dependencies.postcard-cobs]
version = "0.1.5-pre"
default-features = false

[features]
use-std = [
    "postcard-cobs/use_std",
    "rcobs/std",
    "rzcobs/std",
]

# TODO: Remove me!
default = ["use-std"]

[dev-dependencies]
insta = "1.7.1"
